finished html and css

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Unit 1 Assignment</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element  -->
-
+   
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
@@ -21,5 +21,29 @@
     <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
+<div class="profile">
+    <div class="header">
+        <div class="name">
+            <h1>Paul HoangLong</h1>
+        </div>
+    </div>
+    <div class="body">
+        <div class="profile_image">
+            <img src="IMG_0423.jpeg" alt="profile picture">
+        </div>
+        <div class="fun_facts">
+            <h2>Fun Facts</h2>
+            <ul style="list-style-type: none">
+                <li>I love to read! My favorite book is <em>The Once and Future King</em> by T. H. White</li>
+                <li>I am a second generation Vietnamese American (First generation born in America)</li>
+                <li>I identify as non-binary!</li>
+            </ul>
+        </div>
+    </div>
+        <footer>
+            <hr>
+            <p>Maybe the real treasure was the friends we made along the way</p>
+        </footer>
+</div>
 </body>
 </html>
