--- a/assignment/index.html
+++ b/assignment/index.html
@@ -21,29 +21,29 @@
     <!-- Create a footer element -->
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
-<div class="profile">
-    <div class="header">
-        <div class="name">
-            <h1>Paul HoangLong</h1>
+    <div class="profile">
+        <div class="header">
+            <div class="name">
+                <h1>Paul HoangLong</h1>
+            </div>
         </div>
+        <div class="body">
+            <div class="profile_image">
+                <img src="../images/IMG_0423.jpeg" alt="profile picture">
+            </div>
+            <div class="fun_facts">
+                <h2>Fun Facts</h2>
+                <ul style="list-style-type: none">
+                    <li>I love to read! My favorite book is <em>The Once and Future King</em> by T. H. White</li>
+                    <li>I am a second generation Vietnamese American (First generation born in America)</li>
+                    <li>I identify as non-binary!</li>
+                </ul>
+            </div>
+        </div>
+            <footer>
+                <hr>
+                <p>Maybe the real treasure was the friends we made along the way</p>
+            </footer>
     </div>
-    <div class="body">
-        <div class="profile_image">
-            <img src="IMG_0423.jpeg" alt="profile picture">
-        </div>
-        <div class="fun_facts">
-            <h2>Fun Facts</h2>
-            <ul style="list-style-type: none">
-                <li>I love to read! My favorite book is <em>The Once and Future King</em> by T. H. White</li>
-                <li>I am a second generation Vietnamese American (First generation born in America)</li>
-                <li>I identify as non-binary!</li>
-            </ul>
-        </div>
-    </div>
-        <footer>
-            <hr>
-            <p>Maybe the real treasure was the friends we made along the way</p>
-        </footer>
-</div>
 </body>
 </html>
