change colors and format

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,12 +22,12 @@
 
     <!-- Inside your footer, put a <p> element with your favorite quote -->
     <div class="profile">
-        <div class="header">
+        <header>
             <div class="name">
                 <h1>Paul HoangLong</h1>
             </div>
-        </div>
-        <div class="body">
+        </header>
+        <main>
             <div class="profile_image">
                 <img src="../images/IMG_0423.jpeg" alt="profile picture">
             </div>
@@ -36,12 +36,11 @@
                 <ul style="list-style-type: none">
                     <li>I love to read! My favorite book is <em>The Once and Future King</em> by T. H. White</li>
                     <li>I am a second generation Vietnamese American (First generation born in America)</li>
-                    <li>I identify as non-binary!</li>
+                    <li>I enjoy playing video games, with my favorite genre being JRPGs</li>
                 </ul>
             </div>
-        </div>
+        </main>
             <footer>
-                <hr>
                 <p>Maybe the real treasure was the friends we made along the way</p>
             </footer>
     </div>
